--- a/mini-cli/package.json
+++ b/mini-cli/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "mini-cli",
+  "name": "mini-cli-master",
   "version": "0.1.0",
   "description": "脚手架 demo",
   "main": "index.js",
   "bin": {
-    "mvc": "./bin/mvc.js"
+    "mva": "./bin/mvc.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +12,11 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/woai3c/mini-cli.git"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "node scripts/verify-commit.js"
+    }
   },
   "keywords": [],
   "author": "",
